Add completed query param filtering to GET /tasks
